--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1446,4 +1446,10 @@
     <string name="create_serial_question_gr">Θέλετε να καταχωρήσετε νέο είδος με τον σεριακό αριθμό \'\'{0}\'\';</string>
     <string name="create_serial_question_ar">Do you want to create a new item with serial number \'\'{0}\'\'?</string>
 
+
+    <string name="no_date_assignment_confirmation">No start or end date selected. Do you want to proceed?</string>
+    <string name="no_date_assignment_confirmation_gr">Δεν έχετε ορίσει ημερομηνία έναρξης ή λήξης. Θέλετε να συνεχίσετε;</string>
+    <string name="no_date_assignment_confirmation_ar">No start or end date selected. Do you want to proceed?</string>
+
+
 </resources>
